# raclette_vault

./: .gitignore  Cargo.toml  LICENSE  README.md  token_list.json
.github/workflows/: rust.yml
abi/: chainlink.json  erc20_balance.json  erc20_tokens.json
src/: main.rs  utils.rs
src/core/: account.rs  account_test.rs  balance.rs  balance_test.rs  chain.rs  chain_test.rs  cipher_test.rs  eth_chain.rs  eth_chain_test.rs  eth_utils.rs  eth_utils_test.rs  key_pair.rs  key_pair_test.rs  mod.rs  persistence.rs  persistence_test.rs  provider.rs  provider_eth.rs  provider_test.rs  seed_phrase.rs  seed_phrase_test.rs  token.rs  token_test.rs  transaction.rs  utils_test.rs  wallet_account.rs  wallets.rs  wallets_test.rs
src/persistence/: cipher.rs  cipher_test.rs  db.rs  db_accounts.rs  db_chains.rs  db_test.rs  db_transactions.rs  db_transactions_test.rs  manage.rs  manage_test.rs  mod.rs
src/service/: access.rs  account.rs  account_test.rs  crypto.rs  crypto_balances.rs  crypto_test.rs  crypto_transactions.rs  mod.rs  session.rs  session_test.rs
src/tui/: app.rs  ascii.rs  button.rs  common.rs  event.rs  mod.rs  screen.rs  tui.rs  welcome.rs
src/tui/popups/: mod.rs  networks.rs  receive.rs  send.rs  transaction_send.rs
src/tui/screens/: account_create.rs  account_delete.rs  account_import_finalize.rs  account_import_start.rs  account_import_words.rs  account_login.rs  account_secure.rs  create.rs  delete_account.rs  generate.rs  home.rs  login.rs  mnemonic_access.rs  mod.rs  (+8 more)
src/ui/: common.rs  logo.rs  mod.rs  welcome.rs
tui/: Cargo.toml
tui/src/: main.rs
(+13 files in other folders)
