[package]
name = "raclette_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.6"
secp256k1 = { version = "0.20.3", features = ["rand"] }
web3 = "0.19.0"
ratatui = "0.28.0"
serde = "1.0.209"
sled = "0.34.7"
aes-gcm = "0.10.3"
sha3 = "0.10.8"
rand = "0.8.5"
anyhow = "1.0.86"
hex = "0.4.3"
serde_json = "1.0.127"
test-case = "3.3.1"
uuid = { version = "1.10.0", features = ["v4"] }
